Go for JDK 18.