@@ -30,10 +30,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
 				<configuration>
-					<release>17</release>
+					<release>18</release>  
+					<compilerArgs>--enable-preview</compilerArgs>
 					<encoding>UTF-8</encoding>
-					<source>17</source>
-					<target>17</target>
+					<source>18</source>
+					<target>18</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -64,7 +65,7 @@
 				<configuration>
 					<toolchains>
 						<jdk>
-							<version>17</version>
+							<version>18</version>
 							<vendor>openjdk</vendor>
 						</jdk>
 					</toolchains>
